--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
+    "resend": "^4.0.1",
     "sanitize-html": "^2.14.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
