--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.5.0",
     "react-openlayers": "^10.5.1",
     "sanitize-html": "^2.17.1",
+    "resend": "^4.1.2",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "swr": "^2.4.0",
